<resources>
    <string name="app_name">SecurityMax</string>

    <string name="cancel_scanning">取消扫描</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>


    <string name="action_settings">Settings</string>
    <string name="_sim_sim_bind_info">"    绑定SIM卡后，当再次重启手机时，若SIM卡信息发生变化，手机卫士会自动发送报警短信给安全号码！"</string>
    <string name="sample_device_admin_description">我是设备的超级管理员。开启我之后就可以清除数据，远程锁屏。</string>
    <string name="sample_device_admin">手机卫士管理器</string>
    <string name="operator_setting">"仅一次简单设置，以后即可便捷矫正流量，时刻保持与运营商保持精准同步。"</string>
    <string name="add_black_num_hint">确定要把该号码加入黑名单，\n并为其选择拦截内容？</string>
    <string name="cancel">取消</string>
    <string name="select_all">全选</string>
    <string name="add_black_num">添加黑名单</string>
    <string name="add_hint">手动输入号码加入黑名单</string>
    <string name="input_number">输入号码</string>
    <string name="sure">确定</string>
    <string name="intercept_phone">拦截电话</string>
    <string name="intercept_sms">拦截短信</string>
    <string name="has_not_add_black_list">暂无黑名单</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="quit_app">退出应用</string>
    <string name="app_lock">程序锁</string>
    <string name="intercept">骚扰拦截</string>
    <string name="display_on_notification">在通知栏显示</string>
    <string name="edit_sms_command">修改短信校准指令</string>
    <string name="province">省份</string>
    <string name="sim_location">SIM 卡归属地设置</string>
    <string name="operator_set">运营商设置</string>
    <string name="operator">运营商</string>
    <string name="brand">品牌</string>
    <string name="city">城市</string>
    <string name="scanning_file">正在扫描....文件</string>
    <string name="clean_cache">清除缓存</string>
    <string name="text_return">返回</string>
    <string name="msg_clean_result_indicate">清理完毕， \n您的手机洁净如新</string>
    <string name="traffic_control">流量控制</string>
    <string name="clean">清除无用进程</string>
    <string name="gb">GB</string>
    <string name="daily_left">-- 日常剩余 --</string>
    <string name="correct_now">立即校正</string>
    <string name="today_used">今日已用</string>
    <string name="month_used">本月已用</string>
    <string name="month_bill_suite">本月套餐</string>
    <string name="traffic_query">流量查询</string>

</resources>
