<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appbar"
        layout="@layout/include_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_cancel"
        style="@style/TvTitleStyle"
        android:layout_marginStart="15dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/appbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appbar"/>

    <TextView
        style="@style/TvTitleCenterText"
        android:text="@string/add_black_num"
        app:layout_constraintBottom_toBottomOf="@+id/appbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appbar"/>

    <TextView
        android:id="@+id/tv_sure"
        style="@style/TvTitleStyle"
        android:layout_marginEnd="15dp"
        android:background="@drawable/selector_round_rect_stroke"
        android:clickable="true"
        android:enabled="false"
        android:focusable="true"
        android:text="@string/sure"
        app:layout_constraintBottom_toBottomOf="@+id/appbar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appbar"/>


    <TextView
        android:id="@+id/tv_hint_status"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"/>

    <EditText
        android:id="@+id/et_number"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_round_white_rect"
        android:hint="@string/input_number"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hint_status"/>


    <CheckBox
        android:id="@+id/cb_intercept_sms"
        style="@style/CbRoundStyle"
        android:layout_marginTop="30dp"
        android:text="@string/intercept_sms"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/cb_intercept_phone"
        app:layout_constraintTop_toBottomOf="@+id/et_number"/>

    <CheckBox
        android:id="@+id/cb_intercept_phone"
        style="@style/CbRoundStyle"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/intercept_phone"
        app:layout_constraintLeft_toRightOf="@+id/cb_intercept_sms"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_number"/>


</android.support.constraint.ConstraintLayout>
