<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/divider_horizontal"
    android:orientation="vertical"
    android:showDividers="middle|end">

    <include layout="@layout/include_toolbar"/>


    <Switch
        android:id="@+id/switch_intercept"
        style="@style/SettingSwitchStyle"
        android:text="@string/intercept"/>

    <Switch
        android:id="@+id/switch_app_lock"
        style="@style/SettingSwitchStyle"
        android:text="@string/app_lock"/>

    <TextView
        android:id="@+id/tv_quit_app"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/brick_red"
        android:gravity="center"
        android:text="@string/quit_app"
        android:textColor="@color/white"
        android:textSize="18sp"/>
</LinearLayout>
